Version 2024.6.0

New Features:
- Paragraph Formatting: Added support for paragraph spacing and first-line indentation.
- SVG Output: Introduced support for SVG output format.
- Exception Messaging: Improved exception messages for layout issues, providing detailed information and suspected locations.


Enhancements:
- Content Drawing: Enhanced default content drawing behavior, so content does not unexpectedly repeat in certain cases.
- Library Dependencies: Disabled visibility of native dependencies and the Lato font for cleaner output.
- Compatibility Messaging: Enhanced compatibility exception messages for supported but potentially outdated environments.
- Image Loading: Added fallback path for image loading to enhance development experience on ASP.NET.
- Color Conversion: Added implicit conversion from hex numbers to color.
- Inline Element: Simplified implementation and improved performance.
- Column Element: Simplified implementation and improved performance.


Bug Fixes:
- Column Element: Resolved instability issues in nested layouts with spacing and zero-sized elements.
- JPEG Quality: Disabled JPEG image downsampling/downscaling to maintain the highest quality levels.
- Image Compression: Disabled additional image compression performed by Skia.


Version 2024.6.1
- Layout debugging: significantly improved calculation performance and accuracy of issue detection.
- Text element: improved the default sizing behavior for the Text element. Now, when the text is empty, it works more consistently by taking up zero width while still reserving vertical space based on the font size.
- Fixed compatibility with .NET Standard 2.0.
- Fixed an issue causing invisibility of Table elements containing only Header/Footer elements without content.